---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 42
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::unc_sdk::env::setup_panic_hook();
    let contract: Hello = ::unc_sdk::env::state_read().unwrap_or_default();
    contract.method();
}
